--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,47 @@
 /*  your css code here. If applicable */
+.middle{
+            margin: auto;
+            margin-bottom: 20px;
+            border: 1px solid black;
+        }
+        .middle, .middle tr> td{
+            padding: 1px;
+        }
+
+        #table-1{
+            border-collapse: collapse;
+        }
+        .left{
+            width: 150px;
+        }
+        .center{
+            text-align: center;
+            width: 250px;
+        }
+        .right{
+            text-align: right;
+            width: 180px;
+        }
+
+        #table-2{
+            border-collapse: collapse;
+        }
+        #table-2 tr td{
+            text-align: center;
+            width: 120px;
+        }
+
+        #table-3{
+            border-spacing: 1px;
+        }
+        #table-3 tr td{
+            border-spacing: 1px;
+            min-width: 200px;
+            text-align: center;
+        }
+        .green{
+            background-color: green;
+        }
+        .blue{
+            background-color: blue;
+        }
