--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*  your css code here. If applicable */
 .middle{
-            margin: auto;
-            margin-bottom: 20px;
+/*             margin: auto; */
+/*             margin-bottom: 20px; */
 /*             border: 1px solid black; */
         }
         .middle, .middle tr> *{
